# pyproxy

./: .pre-commit-config.yaml  Dockerfile  Makefile  pyproject.toml
docker/: tox-testenv.Dockerfile
pyproxy/: _types.py  console.py  const.py  errors.py  settings.py  utils.py
pyproxy/protocols/: socks.py  socks5.py  udp.py
tests/: __init__.py
tests/proxy/: test_http.py  test_http_over_host.py  test_http_with_settings.py  test_tcp.py  test_udp.py
